Source/WebCore/animation/WebAnimation.h
@@ -68,7 +68,7 @@ public:
 
     AnimationEffect* effect() const { return m_effect.get(); }
     void setEffect(RefPtr<AnimationEffect>&&);
-    AnimationTimeline* timeline() const;
+    AnimationTimeline* timeline() const { return m_timeline.get(); }
     virtual void setTimeline(RefPtr<AnimationTimeline>&&);
 
     Optional<Seconds> currentTime() const;
@@ -186,7 +186,7 @@ private:
     void applyPendingPlaybackRate();
 
     RefPtr<AnimationEffect> m_effect;
-    WeakPtr<AnimationTimeline> m_timeline;
+    RefPtr<AnimationTimeline> m_timeline;
     UniqueRef<ReadyPromise> m_readyPromise;
     UniqueRef<FinishedPromise> m_finishedPromise;
     Markable<Seconds, Seconds::MarkableTraits> m_previousCurrentTime;
